chore(core): fix scrollbars styles

--- a/packages/core/src/ui/components/WalletOwnAddressesDropdown/WalletOwnAddressDropdown.module.scss
+++ b/packages/core/src/ui/components/WalletOwnAddressesDropdown/WalletOwnAddressDropdown.module.scss
@@ -1,4 +1,5 @@
 @import '../../styles/theme.scss';
+@import '../../../../../common/src/ui/styles/abstracts/mixins';
 
 .overlay {
   z-index: 10 !important;
@@ -37,6 +38,7 @@
 }
 
 .addressDropdownMenu {
+  @include scroll-bar-style;
   max-height: 40vh;
   overflow: auto;
 }
